--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-streamlit>=1.24.1
+streamlit==1.36.0
+opencv-python==4.12.0.88
+numpy==2.2.5
+Pillow==10.4.0
 ultralytics>=8.0.162
-opencv-python>=4.9.0
-Pillow>=10.0.0
-numpy>=1.26
